src/app/set-password/set-password.component.css
.login-block {
    width: 90%;
    margin: 0 auto;
}

.container {
    background: #fff;
    margin: 0 auto;
}

.login-sec {
    padding: 50px 30px;
    position: relative;
    margin: 0 auto;
}

.login-sec .copy-text {
    position: absolute;
    width: 80%;
    bottom: 20px;
    font-size: 13px;
    text-align: center;
}

.img-fluid {
    max-width: 50px;
    margin-bottom: 50px;
}

.banner-text {
    width: 70%;
    position: absolute;
    bottom: 40px;
    padding-left: 20px;
}

.banner-text h2:after {
    content: " ";
    width: 100px;
    height: 5px;
    background: #FFF;
    display: block;
    margin-top: 20px;
    border-radius: 3px;
}

.banner-text p {
    color: #fff;
}

.btn {
    margin-top: 40px;
}

label {
    font-weight: 600;
}

